master: agrego boton de pagos de CoinBase (WTF recovery)

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     })();
 
   </script>
+  <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 
   </head>
   <body>
@@ -179,12 +180,12 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>2</h3> <p>backers</p>
+                <h3>0</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$400</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $10,000</p>
                 </div>
               </div>
               <div class="span4">
@@ -205,7 +206,8 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!--button class="btn btn-success btn-large">Preorder</button-->
+            <a class="coinbase-button" data-code="29a26d6f1a264ae37da958a265f36835" data-button-style="custom_large" href="https://coinbase.com/checkouts/29a26d6f1a264ae37da958a265f36835">Preorder with Bitcoins</a>
           </div>
           <div class="span8 offset2 social">
             <!-- AddThis Button BEGIN -->
